--- a/scss/_creep.scss
+++ b/scss/_creep.scss
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 //
+$fondo-roto: #666;//#B2C750;
 $verde-roto: #B2C750;
 $color-complementario: #000;
 $porcentaje: 45%;
@@ -9,24 +10,26 @@ $porcentaje: 45%;
 
 body {
 
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
 
   font-family: 'Open Sans', sans-serif;
   color: whitesmoke;
-  background: linear-gradient(to bottom, $verde-roto,$porcentaje, $color-complementario);
-  background: -moz-linear-gradient(to bottom, $verde-roto,$porcentaje, $color-complementario); /* FF3.6+ */
-  background: -webkit-linear-gradient(to bottom, $verde-roto,$porcentaje, $color-complementario); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(to bottom, $verde-roto,$porcentaje, $color-complementario); /* IE10+ */
-  background: -webkit-gradient(linear, bottom top, top bottom, color-stop(10%,$verde-roto), color-stop(90%,$color-complementario)); /* Chrome,Safari4+ */
+  background: linear-gradient(to bottom, $fondo-roto,$porcentaje, $color-complementario);
+  background: -moz-linear-gradient(to bottom, $fondo-roto,$porcentaje, $color-complementario); /* FF3.6+ */
+  background: -webkit-linear-gradient(to bottom, $fondo-roto,$porcentaje, $color-complementario); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(to bottom, $fondo-roto,$porcentaje, $color-complementario); /* IE10+ */
+  background: -webkit-gradient(linear, bottom top, top bottom, color-stop(10%,$fondo-roto), color-stop(90%,$color-complementario)); /* Chrome,Safari4+ */
 
   & h1 {
     color: $verde-roto;
-    text-shadow: 3px 3px 1px $color-complementario;
+    opacity: 0.7;
+    // text-shadow: 3px 3px 1px $color-complementario;
     font-size: 3.6em;
   }
   & h2 {
-    color: $verde-roto;
-    text-shadow: 3px 3px 1px $color-complementario;
+    color: $fondo-roto;
+    // text-shadow: 3px 3px 1px $color-complementario;
     font-size: 2.8em;
   }
   // & h3 {
@@ -50,4 +53,18 @@ div {
 }
 .z-1 {
   z-index: -1;
+}
+
+@media screen and (max-width: 640px) {
+  body {
+
+    & h1 {
+      font-size: 3em;
+    }
+    & h2 {
+      font-size: 2em;
+    }
+
+  }
+
 }
