Ajuste de color y va pa'rriba

--- a/scss/_creep.scss
+++ b/scss/_creep.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 //
 $fondo-roto: #666;//#B2C750;
-$verde-roto: #B2C750;
+$verde-roto: #798E17;//#B2C750;
 $color-complementario: #000;
 $porcentaje: 45%;
 //
